refactor: response를 model -> resDto로 변경 - 기존 단건조회 서비스 함수를 쓰던 다른 부분은 db에서 가져오는 로직으로 변경